--- a/Matematikk SR boka.ipynb
+++ b/Matematikk SR boka.ipynb
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fb96fac1-9717-4c68-bbd3-deab6cb46c7c",
    "metadata": {},
    "outputs": [
@@ -1313,7 +1313,7 @@
       "\n",
       "📌 VELKOMMEN TIL ØKONOMIKALKULATOREN\n",
       "Velg en kalkulator fra menyen under:\n",
-      "1: Boliglånkalkulator (Annuitet og Serie)\n",
+      "1: Boliglånkalkulator (Annuitetslån og Serielån)\n",
       "2: Kredittkortkalkulator (Renter fra første måned)\n",
       "3: Generell renteberegning (Med valgfri rentefri periode)\n"
      ]
@@ -1322,14 +1322,80 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Velg funksjon (1-3), eller skriv 'q' for å avslutte:  q\n"
+      "Velg funksjon (1-3), eller skriv 'q' for å avslutte:  120000\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Programmet er avsluttet. Takk for nå!\n"
+      "❌ Ugyldig valg. Vennligst velg et tall fra menyen.\n",
+      "\n",
+      "------------MENY------------\n",
+      "\n",
+      "\n",
+      "📌 VELKOMMEN TIL ØKONOMIKALKULATOREN\n",
+      "Velg en kalkulator fra menyen under:\n",
+      "1: Boliglånkalkulator (Annuitetslån og Serielån)\n",
+      "2: Kredittkortkalkulator (Renter fra første måned)\n",
+      "3: Generell renteberegning (Med valgfri rentefri periode)\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Velg funksjon (1-3), eller skriv 'q' for å avslutte:  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📘 GENERELL RENTEBEREGNING MED VALGFRI RENTEFRI PERIODE\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Hva er startbeløpet/lånebeløpet? (kr):  120000\n",
+      "Hva er den månedlige renten ETTER en eventuell rentefri periode? (%):  1.6\n",
+      "Velg tidsenhet for rentefri periode (uker/måneder/år, skriv '0' eller 'måneder' hvis ingen):  måneder\n",
+      "Hvor lang er den rentefrie perioden i måneder? (skriv 0 hvis ingen):  6\n",
+      "Velg total tidsenhet lånet/beløpet har stått (uker/måneder/år):  år\n",
+      "Hvor lenge har lånet/beløpet stått totalt i år?  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🧮 RESULTATER:\n",
+      "📅 Startbeløp: 120000.00 kr\n",
+      "🗓️ Rentefri periode: 6 måneder.\n",
+      "⏳ Total tid: 24 måneder.\n",
+      "📈 Antall måneder med renteberegning: 18 måneder.\n",
+      "📊 Månedlig rente (etter rentefri periode): 1.60 % (Vekstfaktor: 1.0160)\n",
+      "\n",
+      "🔢 Sluttbeløp\n",
+      "Sluttbeløp etter 24 måneder: 159686.42 kr\n",
+      "\n",
+      "🔢 Total Vekst\n",
+      "Beløpet har vokst med 33.07 % 1.33 x ganger\n",
+      "📈 Prosentvis rente i første og andre året (etter rentefri periode): 21.0 % for 12 måned(er)\n",
+      "📈 Prosentvis rente i første året: 10.0 % for 6 måned(er)\n",
+      "\n",
+      "------------MENY------------\n",
+      "\n",
+      "\n",
+      "📌 VELKOMMEN TIL ØKONOMIKALKULATOREN\n",
+      "Velg en kalkulator fra menyen under:\n",
+      "1: Boliglånkalkulator (Annuitetslån og Serielån)\n",
+      "2: Kredittkortkalkulator (Renter fra første måned)\n",
+      "3: Generell renteberegning (Med valgfri rentefri periode)\n"
      ]
     }
    ],
@@ -1516,7 +1582,7 @@
     "                break\n",
     "            elif valg == '1' or valg == '2':\n",
     "                enhet_periode = input(\"Velg tidsenhet for perioden (uker/måneder/år): \").strip().lower()\n",
-    "                tid_periode_input = hent_float(f\"Hvor mange {enhet_periode} har gått siden kjøpet/opptaket? \")\n",
+    "                tid_periode_input = hent_float(f\"Hvor mange {enhet_periode} har gått siden kjøpet? \")\n",
     "                if tid_periode_input is None or tid_periode_input < 0:\n",
     "                    if tid_periode_input is not None: print(\"❌ Tidsperioden kan ikke være negativ.\")\n",
     "                    continue\n",
@@ -1609,13 +1675,21 @@
     "    print_beregningsresultat(\"Total Vekst\", f\"Beløpet har vokst med {prosentvis_total_vekst:.2f} %\", \n",
     "                             total_vekstfaktor_over_perioden, enhet=\"x ganger\")\n",
     "    \n",
-    "    # Valgfritt: Vis rente for første og andre år med rente, hvis relevant\n",
-    "    if mnd_med_rente_totalt > 0:\n",
-    "        rente_forste_aar_med_rente_prosent = round((vekstfaktor_mnd ** min(12, mnd_med_rente_totalt) - 1) * 100, 1)\n",
-    "        print(f\"📈 Prosentvis rente det første året det påløper renter: {rente_forste_aar_med_rente_prosent} %\")\n",
-    "    if mnd_med_rente_totalt > 12:\n",
-    "        rente_andre_aar_med_rente_prosent = round((vekstfaktor_mnd ** 12 -1) * 100, 1) #Renten for et fullt år med renter\n",
-    "        print(f\"📈 Prosentvis rente for et påfølgende fullt år med renter: {rente_andre_aar_med_rente_prosent} %\")\n",
+    "   # 🎯 Utvidet renteanalyse for skoleoppgaver\n",
+    "    # Del opp rentemåneder i første og andre år\n",
+    "    rentemnd_aar1 = max(0, min(12, mnd_med_rente_totalt))\n",
+    "    rentemnd_aar2 = max(0, mnd_med_rente_totalt - rentemnd_aar1)\n",
+    "\n",
+    "    if rentemnd_aar1 > 0:\n",
+    "        vekstfaktor_aar1 = vekstfaktor_mnd ** rentemnd_aar1\n",
+    "        prosent_aar1 = round((vekstfaktor_aar1 - 1) * 100, 1)\n",
+    "        print(f\"📈 Prosentvis rente i første og andre året (etter rentefri periode): {prosent_aar1} % for {rentemnd_aar1} måned(er)\")\n",
+    "\n",
+    "    if rentemnd_aar2 > 0:\n",
+    "        vekstfaktor_aar2 = vekstfaktor_mnd ** min(12, rentemnd_aar2)\n",
+    "        prosent_aar2 = round((vekstfaktor_aar2 - 1) * 100, 1)\n",
+    "        print(f\"📈 Prosentvis rente i første året: {prosent_aar2} % for {min(12, rentemnd_aar2)} måned(er)\")\n",
+    "\n",
     "        \n",
     "    return True\n",
     "\n",
@@ -1623,7 +1697,7 @@
     "def hovedprogram():\n",
     "    print(\"\\n📌 VELKOMMEN TIL ØKONOMIKALKULATOREN\")\n",
     "    print(\"Velg en kalkulator fra menyen under:\")\n",
-    "    print(\"1: Boliglånkalkulator (Annuitet og Serie)\")\n",
+    "    print(\"1: Boliglånkalkulator (Annuitetslån og Serielån)\")\n",
     "    print(\"2: Kredittkortkalkulator (Renter fra første måned)\")\n",
     "    print(\"3: Generell renteberegning (Med valgfri rentefri periode)\") # Tidligere valg 4\n",
     "    \n",
@@ -1650,6 +1724,14 @@
     "            print(\"\\n------------MENY------------\\n\")\n",
     "    print(\"✅ Programmet er avsluttet. Takk for nå!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ce8c5da-2fe0-4609-b89b-3b03f9317990",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2162,7 +2244,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
