--- a/Matematikk SR boka.ipynb
+++ b/Matematikk SR boka.ipynb
@@ -1733,11 +1733,334 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "34663d94-8efc-4b7f-aefa-b446c82364d7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formel- og uttrykksloser med SymPy\n",
+      "Skriv 'q' nar som helst for a avslutte programmet.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Skriv inn et uttrykk, en ligning, ulikhet, eller system (separert med ';'):\n",
+      ">  L=0.11*F+1.8*E\n",
+      "Velg handling:\n",
+      "1 = Evaluer uttrykk\n",
+      "2 = Los ligning(er)/ulikhet\n",
+      "3 = Isoler en variabel\n",
+      "(q for a avslutte)\n",
+      ">  1\n",
+      "Skriv inn kjente verdier (f.eks. x=3, y=pi/2, z=sqrt(2)):\n",
+      ">  F=400, E=20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultat: 80\n",
+      "\n",
+      "----------------------------\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Skriv inn et uttrykk, en ligning, ulikhet, eller system (separert med ';'):\n",
+      ">  q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avslutter programmet. Ha en fin dag!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3 Formler: 3.1 Formelregning\n",
+    "from sympy import symbols, Eq, parse_expr, Symbol, simplify, S, Number as SympyNumber\n",
+    "from sympy.core.relational import Relational\n",
+    "from sympy.solvers import solve\n",
+    "from sympy.solvers.inequalities import solve_univariate_inequality\n",
+    "from sympy.parsing.sympy_parser import standard_transformations, implicit_multiplication_application\n",
+    "\n",
+    "# Kompatibilitet for RelationalOp\n",
+    "try:\n",
+    "    from sympy.core.relational import RelationalOp\n",
+    "except ImportError:\n",
+    "    RelationalOp = Relational # For eldre SymPy-versjoner\n",
+    "\n",
+    "# Konfigurasjon for parser\n",
+    "transformations = standard_transformations + (implicit_multiplication_application,)\n",
+    "\n",
+    "# Hjelpeordbok for symboler som kan kollidere med SymPy-konstanter\n",
+    "_RESERVED_NAMES_AS_SYMBOLS = {name: Symbol(name) for name in [\"E\", \"I\", \"N\", \"O\", \"Q\", \"S\"]}\n",
+    "\n",
+    "# -------------------- Hjelpefunksjoner for Parsing --------------------\n",
+    "def custom_parse_expr(expr_str, local_dict_override=None, **kwargs):\n",
+    "    \"\"\"\n",
+    "    Parser et uttrykk og sikrer at visse navn (E, I, N, O, Q, S)\n",
+    "    behandles som symboler, med mindre annet er spesifisert.\n",
+    "    Bruker standard 'transformations'.\n",
+    "    \"\"\"\n",
+    "    effective_local_dict = _RESERVED_NAMES_AS_SYMBOLS.copy()\n",
+    "    if local_dict_override: # For tilfeller der vi IKKE vil overstyre (f.eks. verdiparsing)\n",
+    "        effective_local_dict.update(local_dict_override)\n",
+    "    \n",
+    "    if 'transformations' not in kwargs:\n",
+    "        kwargs['transformations'] = transformations\n",
+    "        \n",
+    "    return parse_expr(expr_str, local_dict=effective_local_dict, **kwargs)\n",
+    "\n",
+    "# -------------------- Kjernefunksjoner --------------------\n",
+    "\n",
+    "def parse_ligning(expr_str):\n",
+    "    \"\"\"Parser et uttrykk pa formen 'venstre = hoyre' til en sympy-ligning.\"\"\"\n",
+    "    venstre, hoyre = expr_str.split('=', maxsplit=1)\n",
+    "    return Eq(custom_parse_expr(venstre.strip()),\n",
+    "              custom_parse_expr(hoyre.strip()))\n",
+    "\n",
+    "def løs_uttrykk(uttrykk_str):\n",
+    "    \"\"\"Loser en ligning, ulikhet eller system av ligninger.\"\"\"\n",
+    "    try:\n",
+    "        if ';' in uttrykk_str:\n",
+    "            ligninger = [parse_ligning(eq.strip()) for eq in uttrykk_str.split(';')]\n",
+    "            return solve(ligninger, dict=True)\n",
+    "\n",
+    "        is_potential_inequality = any(op in uttrykk_str for op in ['<', '>', '<=', '>='])\n",
+    "        is_assignment_like = '=' in uttrykk_str and not any(op in uttrykk_str for op in ['<=', '>=', '!=', '=='])\n",
+    "\n",
+    "\n",
+    "        if is_potential_inequality and not is_assignment_like:\n",
+    "            if \" & \" in uttrykk_str or \" | \" in uttrykk_str:\n",
+    "                 return \"X Sammensatte ulikheter med '&' eller '|' stottes ikke direkte. Prov en ulikhet.\"\n",
+    "            \n",
+    "            if '==' in uttrykk_str: \n",
+    "                pass\n",
+    "            else:\n",
+    "                ulikhet = custom_parse_expr(uttrykk_str) \n",
+    "                if not isinstance(ulikhet, (Relational, RelationalOp)):\n",
+    "                    return f\"X Uttrykket '{uttrykk_str}' er ikke en gyldig ulikhetsstruktur.\"\n",
+    "                variabler = sorted(list(ulikhet.free_symbols), key=lambda s: s.name)\n",
+    "                if not variabler:\n",
+    "                    simplified_truth_value = simplify(ulikhet)\n",
+    "                    if simplified_truth_value == S.true: return S.Reals\n",
+    "                    if simplified_truth_value == S.false: return S.EmptySet\n",
+    "                    return f\"Symbolsk konstant ulikhet: {ulikhet}\"\n",
+    "                hoved_var = variabler[0]\n",
+    "                return solve_univariate_inequality(ulikhet, hoved_var, relational=False)\n",
+    "\n",
+    "        if '==' in uttrykk_str:\n",
+    "             lhs, rhs = uttrykk_str.split('==', 1)\n",
+    "             ligning = Eq(custom_parse_expr(lhs.strip()), custom_parse_expr(rhs.strip()))\n",
+    "        elif '=' not in uttrykk_str: \n",
+    "            parsed_lhs = custom_parse_expr(uttrykk_str)\n",
+    "            ligning = Eq(parsed_lhs, 0)\n",
+    "        else: \n",
+    "            ligning = parse_ligning(uttrykk_str)\n",
+    "        \n",
+    "        return solve(ligning, dict=True)\n",
+    "    except Exception as e:\n",
+    "        return f\"X Feil under losning: {e}\"\n",
+    "\n",
+    "def evaluer_uttrykk(uttrykk_str, kjente_verdier, symbolsk=True):\n",
+    "    \"\"\"Evaluerer et uttrykk (eller hoyreside av en likning) med gitte verdier.\"\"\"\n",
+    "    try:\n",
+    "        expr_to_parse = uttrykk_str\n",
+    "        if '=' in uttrykk_str and '==' not in uttrykk_str :\n",
+    "            parts = uttrykk_str.split('=', maxsplit=1)\n",
+    "            if not (parts[0].endswith('<') or parts[0].endswith('>') or parts[0].endswith('!')):\n",
+    "                 _, hoyre_side_str = parts\n",
+    "                 expr_to_parse = hoyre_side_str.strip()\n",
+    "\n",
+    "        parsed_uttrykk = custom_parse_expr(expr_to_parse)\n",
+    "        \n",
+    "        subs_dict = {}\n",
+    "        for s in parsed_uttrykk.free_symbols:\n",
+    "            if s.name in kjente_verdier:\n",
+    "                subs_dict[s] = kjente_verdier[s.name]\n",
+    "\n",
+    "        evaluert_uttrykk = parsed_uttrykk.subs(subs_dict)\n",
+    "\n",
+    "        is_numeric_evaluable = hasattr(evaluert_uttrykk, 'is_Number') and evaluert_uttrykk.is_Number\n",
+    "        if not is_numeric_evaluable: \n",
+    "             is_numeric_evaluable = hasattr(evaluert_uttrykk, 'is_number') and evaluert_uttrykk.is_number\n",
+    "        if not is_numeric_evaluable:\n",
+    "            is_numeric_evaluable = isinstance(evaluert_uttrykk, SympyNumber) or not evaluert_uttrykk.free_symbols\n",
+    "\n",
+    "        if not symbolsk and is_numeric_evaluable:\n",
+    "            resultat = evaluert_uttrykk.evalf()\n",
+    "        else:\n",
+    "            resultat = evaluert_uttrykk\n",
+    "        \n",
+    "        return resultat\n",
+    "    except Exception as e:\n",
+    "        return f\"X Feil under evaluering: {e}\"\n",
+    "\n",
+    "def løs_for_variabel(uttrykk_str, mål_variabel_navn, kjente_verdier):\n",
+    "    \"\"\"Loser en ukjent gitt kjente verdier.\"\"\"\n",
+    "    try:\n",
+    "        eq_str = uttrykk_str.split(';')[0].strip()\n",
+    "        \n",
+    "        if '==' in eq_str:\n",
+    "            lhs, rhs = eq_str.split('==', 1)\n",
+    "            ligning = Eq(custom_parse_expr(lhs.strip()), custom_parse_expr(rhs.strip()))\n",
+    "        elif '=' in eq_str:\n",
+    "            ligning = parse_ligning(eq_str) \n",
+    "        else:\n",
+    "            ligning = Eq(custom_parse_expr(eq_str.strip()),0)\n",
+    "\n",
+    "        mål_symbol = Symbol(mål_variabel_navn)\n",
+    "        \n",
+    "        subs_for_eq = {}\n",
+    "        for s in ligning.free_symbols:\n",
+    "            if s.name in kjente_verdier and s.name != mål_variabel_navn:\n",
+    "                 subs_for_eq[s] = kjente_verdier[s.name]\n",
+    "\n",
+    "        substituert_ligning = ligning.subs(subs_for_eq)\n",
+    "        \n",
+    "        if mål_symbol not in substituert_ligning.free_symbols:\n",
+    "            if hasattr(substituert_ligning, 'lhs') and hasattr(substituert_ligning, 'rhs'):\n",
+    "                simplified_eq_check = simplify(substituert_ligning.lhs - substituert_ligning.rhs)\n",
+    "                if simplified_eq_check == 0: \n",
+    "                    return f\"Ligningen er alltid sann for de gitte verdiene. '{mål_variabel_navn}' kan vaere hva som helst (eller ikke relevant).\"\n",
+    "                elif not substituert_ligning.free_symbols: \n",
+    "                     return \"Ligningen er usann/en selvmotsigelse for de gitte verdiene. Ingen losning.\"\n",
+    "            return f\"Variabelen '{mål_variabel_navn}' finnes ikke i ligningen etter substitusjon, eller ligningen er ikke avhengig av den.\"\n",
+    "\n",
+    "        return solve(substituert_ligning, mål_symbol)\n",
+    "    except Exception as e:\n",
+    "        return f\"X Feil under isolering: {e}\"\n",
+    "\n",
+    "def hent_kjente_verdier():\n",
+    "    \"\"\"Spor brukeren om variableverdier i formatet x=3, y=pi/2.\"\"\"\n",
+    "    raw_input_str = input(\"Skriv inn kjente verdier (f.eks. x=3, y=pi/2, z=sqrt(2)):\\n> \")\n",
+    "\n",
+    "    try:\n",
+    "        verdier = {}\n",
+    "        if raw_input_str.strip() == \"\": return verdier\n",
+    "        for item in raw_input_str.split(','):\n",
+    "            key_val_pair = item.strip().split('=', maxsplit=1)\n",
+    "            if len(key_val_pair) != 2:\n",
+    "                print(f\"Advarsel: Ugyldig format for '{item.strip()}'. Hopper over.\")\n",
+    "                continue\n",
+    "            key, val_str = key_val_pair\n",
+    "            key = key.strip()\n",
+    "            val_str = val_str.strip()\n",
+    "\n",
+    "            try:\n",
+    "                parsed_val = parse_expr(val_str, transformations=transformations, evaluate=True, local_dict={})\n",
+    "            except SyntaxError: \n",
+    "                try:\n",
+    "                    parsed_val = float(val_str) \n",
+    "                except ValueError:\n",
+    "                    try:\n",
+    "                        parsed_val = int(val_str) \n",
+    "                    except ValueError:\n",
+    "                        print(f\"Advarsel: Kunne ikke parse verdien '{val_str}' for '{key}'. Hopper over.\")\n",
+    "                        continue\n",
+    "            \n",
+    "            is_num_type = isinstance(parsed_val, (int, float))\n",
+    "            is_sympy_num_obj = hasattr(parsed_val, 'is_Number') and parsed_val.is_Number\n",
+    "            if not is_sympy_num_obj: \n",
+    "                is_sympy_num_obj = hasattr(parsed_val, 'is_number') and parsed_val.is_number\n",
+    "            \n",
+    "            if is_num_type and not is_sympy_num_obj : \n",
+    "                 verdier[key] = SympyNumber(parsed_val)\n",
+    "            else: \n",
+    "                verdier[key] = parsed_val\n",
+    "        return verdier\n",
+    "    except Exception as e:\n",
+    "        print(f\"Advarsel: Ugyldig format for kjente verdier ({e}). Prov igjen med f.eks. x=3, y=pi/2.\")\n",
+    "        return hent_kjente_verdier()\n",
+    "\n",
+    "# -------------------- Hovedprogram --------------------\n",
+    "def main():\n",
+    "    print(\"Formel- og uttrykksloser med SymPy\")\n",
+    "    print(\"Skriv 'q' nar som helst for a avslutte programmet.\\n\")\n",
+    "\n",
+    "    if not hasattr(SympyNumber, 'is_Number') and hasattr(SympyNumber, 'is_number'):\n",
+    "        SympyNumber.is_Number = property(lambda self: self.is_number)\n",
+    "    elif not hasattr(SympyNumber, 'is_Number'): \n",
+    "         SympyNumber.is_Number = property(lambda self: isinstance(self, SympyNumber))\n",
+    "\n",
+    "\n",
+    "    while True:\n",
+    "        uttrykk_str_input = input(\"Skriv inn et uttrykk, en ligning, ulikhet, eller system (separert med ';'):\\n> \")\n",
+    "        if uttrykk_str_input.lower() == 'q':\n",
+    "            print(\"Avslutter programmet. Ha en fin dag!\")\n",
+    "            break\n",
+    "\n",
+    "        handling = input(\"Velg handling:\\n1 = Evaluer uttrykk\\n2 = Los ligning(er)/ulikhet\\n3 = Isoler en variabel\\n(q for a avslutte)\\n> \")\n",
+    "        if handling.lower() == 'q':\n",
+    "            print(\"Avslutter programmet. Ha en fin dag!\")\n",
+    "            break\n",
+    "\n",
+    "        if handling == '1':\n",
+    "            verdier_input = hent_kjente_verdier()\n",
+    "            resultat = evaluer_uttrykk(uttrykk_str_input, verdier_input, symbolsk=False)\n",
+    "            \n",
+    "            if isinstance(resultat, str) and resultat.startswith(\"X\"): print(resultat)\n",
+    "            elif hasattr(resultat, 'evalf'): \n",
+    "                try:\n",
+    "                    num_val = resultat.evalf() \n",
+    "                    if hasattr(num_val, 'is_Integer') and num_val.is_Integer:\n",
+    "                        print(f\"Resultat: {int(num_val)}\")\n",
+    "                    elif (hasattr(num_val, 'is_Float') and num_val.is_Float) or \\\n",
+    "                         (hasattr(num_val, 'is_Rational') and num_val.is_Rational) or \\\n",
+    "                         (hasattr(num_val, 'as_real_imag')): \n",
+    "                        try:\n",
+    "                            py_float_val = float(num_val)\n",
+    "                            if py_float_val == int(py_float_val): \n",
+    "                                print(f\"Resultat: {int(py_float_val)}\")\n",
+    "                            else:\n",
+    "                                print(f\"Resultat: {py_float_val:.2f}\") \n",
+    "                        except (TypeError, ValueError, OverflowError): \n",
+    "                             print(f\"Resultat: {num_val}\") \n",
+    "                    else: \n",
+    "                        print(f\"Resultat: {num_val}\")\n",
+    "\n",
+    "                except (TypeError, AttributeError, ValueError): \n",
+    "                    print(f\"Resultat: {resultat}\") \n",
+    "            else: \n",
+    "                print(f\"Resultat: {resultat}\")\n",
+    "\n",
+    "\n",
+    "        elif handling == '2':\n",
+    "            resultat = løs_uttrykk(uttrykk_str_input)\n",
+    "            print(\"Losning(er):\", resultat)\n",
+    "\n",
+    "        elif handling == '3':\n",
+    "            verdier_input = hent_kjente_verdier()\n",
+    "            mål_input = input(\"Hvilken variabel onsker du a isolere/lose for?\\n> \")\n",
+    "            resultat = løs_for_variabel(uttrykk_str_input, mål_input, verdier_input)\n",
+    "            \n",
+    "            if isinstance(resultat, str) and resultat.startswith(\"X\"): print(resultat)\n",
+    "            elif isinstance(resultat, str): print(f\"Info: {resultat}\") \n",
+    "            elif isinstance(resultat, list):\n",
+    "                if not resultat: print(f\"Ingen losning funnet for {mål_input}.\")\n",
+    "                elif len(resultat) == 1: print(f\"Isolert losning for {mål_input}: {resultat[0]}\")\n",
+    "                else: print(f\"Isolerte losninger for {mål_input}: {resultat}\")\n",
+    "            else: print(f\"Uventet resultat: {resultat}\")\n",
+    "        else:\n",
+    "            print(\"Advarsel: Ugyldig valg. Prov igjen.\")\n",
+    "        print(\"\\n----------------------------\\n\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   },
   {
    "cell_type": "code",
